--- a/css/global.css
+++ b/css/global.css
@@ -111,6 +111,7 @@ button {
   cursor: pointer;
 }
 
+select,
 input[type="text"],
 input[type="email"] {
   outline: none;
@@ -134,6 +135,10 @@ input[type="email"] {
 
 .h-100 {
   height: 100%;
+}
+
+.mr-12 {
+  margin-right: 12px;
 }
 
 @media (max-width: 1280px) {
