feat : 탭 클릭 js 추가하다

--- a/css/output/output.css
+++ b/css/output/output.css
@@ -44,6 +44,10 @@ main {
 }
 
 .output-content {
+  display: none;
+}
+
+.output-content.active {
   margin-top: 40px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
