feat : 출력물 모달창 추가하다

--- a/css/output/output.css
+++ b/css/output/output.css
@@ -94,6 +94,10 @@ main {
 }
 
 /* 연등꼬리표 content */
+.output-content {
+  cursor: pointer;
+}
+
 .output-content.item1 > div:nth-child(1) img,
 .output-content.item1 > div:nth-child(2) img {
   width: 420px;
@@ -129,6 +133,15 @@ div:nth-child(4) img {
 .output-content.item3 div:nth-child(6) img {
   width: 528px;
   height: 374px;
+}
+
+.output-content .modal {
+  display: none;
+}
+
+.output-content .modal.active {
+  position: fixed;
+  display: block;
 }
 
 @media (max-width: 1280px) {
