--- a/css/output/output.css
+++ b/css/output/output.css
@@ -156,7 +156,7 @@ div:nth-child(4) img {
 
 .modal-content {
   width: 850px;
-  height: 80%;
+  max-height: 80%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
