style : 출력물 mo 스타일 수정하다

--- a/css/output/output.css
+++ b/css/output/output.css
@@ -280,7 +280,17 @@ div:nth-child(4) img {
   }
 
   /* 모달 */
+  .modal-content {
+    padding: 20px;
+    width: calc(100vw - 40px);
+  }
+
   .modal-content .modal-content-text {
     display: none;
+  }
+
+  .modal-content .modal-header h3 {
+    font-size: 20px;
+    letter-spacing: -0.2px;
   }
 }
