feat : 문의하기 링크 추가하기

--- a/css/index/index.css
+++ b/css/index/index.css
@@ -31,7 +31,8 @@ section h3 a:after {
   content: "";
   width: 24px;
   height: 24px;
-  background: url(../img/icon-right-arrow-gray-24x24.png) center/24px no-repeat;
+  background: url(../../img/icon-right-arrow-gray-24x24.png) center/24px
+    no-repeat;
 }
 
 section > .sub-title {
