--- a/css/index/index-section4.css
+++ b/css/index/index-section4.css
@@ -83,10 +83,11 @@
   cursor: pointer;
 }
 
-.portfolio-btn img {
-  display: block;
+.portfolio-btn:after {
+  content: "";
   width: 24px;
   height: 24px;
+  background: url(../../img/index/icon-more.png) center/24px no-repeat;
 }
 
 @media (max-width: 1280px) {
@@ -154,9 +155,10 @@
     font-size: 16px;
   }
 
-  .portfolio-btn img {
-    padding-bottom: 2px;
+  .portfolio-btn:after {
+    content: "";
     width: 20px;
     height: 20px;
+    background: url(../../img/index/icon-more.png) center/20px no-repeat;
   }
 }
