--- a/css/portfolio/portfolio.css
+++ b/css/portfolio/portfolio.css
@@ -48,6 +48,114 @@ main {
   letter-spacing: -0.66px;
 }
 
+/* 모달 */
+.modal {
+  display: none;
+}
+
+.modal.active {
+  z-index: 999;
+  position: fixed;
+  inset: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  background: rgba(0, 0, 0, 0.5); /* 모달 배경 어둡게 */
+  border: none;
+}
+
+.modal-content {
+  width: 1280px;
+  max-height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 20px;
+  background: var(--white);
+  padding: 40px 60px 60px;
+}
+
+.modal-content .modal-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-content .modal-header:after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background: url(../../img/output/modal/icon-close.png) center/contain
+    no-repeat;
+}
+
+.modal-content .modal-header h3 {
+  color: #1a1a1a;
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: -0.32px;
+}
+
+.modal-content .modal-content-text {
+  margin-bottom: 20px;
+  flex-shrink: 0;
+  padding: 20px;
+  width: 100%;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
+  background: var(--bg5);
+}
+
+.modal-content .modal-content-text dl {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 184px 1fr 184px 1fr;
+}
+
+.modal-content .modal-content-text dt {
+  color: var(--gray6);
+  font-size: 22px;
+  letter-spacing: -0.22px;
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+
+.modal-content .modal-content-text dt:before {
+  content: "";
+  width: 8px;
+  height: 8px;
+  background: #cccccc;
+}
+
+.modal-content .modal-content-text dd {
+  color: var(--black);
+  font-size: 22px;
+  letter-spacing: -0.22px;
+}
+
+.modal-content .modal-content-text dd a {
+  text-decoration: underline;
+}
+
+.modal-content .img-content {
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.modal-content .img-content img {
+  display: block;
+  width: 100% !important;
+  height: auto !important;
+}
+
 @media (max-width: 1280px) {
   main {
     padding: 40px 0 70px;
@@ -74,5 +182,50 @@ main {
     font-size: 16px;
     font-weight: 600;
     letter-spacing: -0.48px;
+  }
+
+  /* 모달 */
+  .modal-content {
+    padding: 20px;
+    width: calc(100vw - 40px);
+    gap: 0;
+  }
+
+  .modal-content .modal-content-text {
+    display: block;
+  }
+
+  .modal-content .modal-header h3 {
+    font-size: 20px;
+    letter-spacing: -0.2px;
+  }
+
+  .modal-content .modal-content-text {
+    margin-top: 30px;
+    margin-bottom: 12px;
+    height: auto;
+  }
+
+  .modal-content .modal-content-text dl {
+    display: block;
+  }
+
+  .modal-content .modal-content-text dt {
+    font-size: 16px;
+    letter-spacing: -0.16px;
+    gap: 10px;
+  }
+
+  .modal-content .modal-content-text dt + dd {
+    margin-top: 2px;
+  }
+
+  .modal-content .modal-content-text dd {
+    font-size: 16px;
+    letter-spacing: -0.16px;
+  }
+
+  .modal-content .modal-content-text dd + dt {
+    margin-top: 10px;
   }
 }
