--- a/css/index/index-section3.css
+++ b/css/index/index-section3.css
@@ -24,7 +24,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8); /* 배경색과 투명도 설정 */
-  background-image: url(../img/index/more-detail.png); /* 이미지 경로 */
+  background-image: url(../../img/index/more-detail.png); /* 이미지 경로 */
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 97px;
