feat : 드래그 문구 추가하다

--- a/css/compare-now/compare-now.css
+++ b/css/compare-now/compare-now.css
@@ -344,6 +344,7 @@ main {
   /* 비교표 섹션 */
   .comparison-description {
     padding-left: 8px;
+    margin-bottom: 20px;
   }
 
   .comparison-description p {
