style : 텍스트 위치 수정하다

--- a/css/index/index-section2.css
+++ b/css/index/index-section2.css
@@ -15,8 +15,9 @@
 }
 .standard-area ul li a span {
   position: absolute;
-  top: 30px;
+  top: 50%;
   left: 50px;
+  transform: translateY(-50%);
   width: auto;
   color: var(--black);
   font-size: 22px;
