style : mo gnb 상단에 고정하다

--- a/css/global.css
+++ b/css/global.css
@@ -143,6 +143,19 @@ input[type="email"] {
 }
 
 @media (max-width: 1280px) {
+  #header {
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--white);
+  }
+
+  main {
+    margin-top: 64px;
+  }
+
   section {
     width: 100%;
     padding: 0 20px;
