style : 문의하기 mo input 너비 수정하다

--- a/css/contact-us/contact-us.css
+++ b/css/contact-us/contact-us.css
@@ -385,6 +385,10 @@ form-row input[type="text"]::placeholder {
     display: block;
   }
 
+  .form-row input[type="text"] {
+    width: 100%;
+  }
+
   .form-label {
     padding: 0;
     min-height: auto;
