--- a/css/global.css
+++ b/css/global.css
@@ -56,8 +56,18 @@ body {
   background: var(--white);
 }
 
+#header {
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--white);
+}
+
 main {
   flex-grow: 1;
+  margin-top: 100px;
 }
 
 h2,
@@ -143,15 +153,6 @@ input[type="email"] {
 }
 
 @media (max-width: 1280px) {
-  #header {
-    z-index: 10;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: var(--white);
-  }
-
   main {
     margin-top: 64px;
   }
